Refactoring back into two datatypes
